# pydanticai-fastapi-boilerplate

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
pydanticai_fastapi_boilerplate/: __init__.py  cli.py  generator.py
pydanticai_fastapi_boilerplate/templates/: .env.example.j2  README.md.j2  __init__.py.j2  requirements.txt.j2
pydanticai_fastapi_boilerplate/templates/app/: __init__.py.j2  main.py.j2
pydanticai_fastapi_boilerplate/templates/app/api/: __init__.py.j2
pydanticai_fastapi_boilerplate/templates/app/api/models/: query_models.py.j2
pydanticai_fastapi_boilerplate/templates/app/database/: __init__.py.j2  connection.py.j2
pydanticai_fastapi_boilerplate/templates/app/llm/: __init__.py.j2  agent.py.j2  function_schemas.py.j2  function_tools.py.j2
pydanticai_fastapi_boilerplate/templates/config/: __init__.py.j2  settings.py.j2
